[package]
name = "libpyepa"
version = "0.1.0"
edition = "2021"
authors = ["Kenneth Matovu <kenneth@uvotam.com>"]
description = "Pyepa a peer-to-peer order management protocol SDK"
license = "APACHE 2.0"
repository = "https://github.com/Pyepa-dApp/libpyepa"

[dependencies]
# Cryptography
ring = "0.17.0"
ed25519-dalek = "2.0.0"
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
hkdf = "0.12.0"
rand = "0.8.5"
x25519-dalek = "2.0.0"
aes-gcm = "0.10.2"

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Networking
tokio = { version = "1.32.0", features = ["full"] }
libp2p = { version = "0.52.1", features = [
    "kad",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "identify",
    "ping",
    "websocket",
    "mdns",
    "request-response",
    "tokio",
    "macros",
] }

# Utilities
thiserror = "1.0.48"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
base64 = "0.21.4"
hex = "0.4.3"
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"
bincode = "1.3.3"
dirs = "5.0.1"
clap = { version = "4.4.6", features = ["derive"] }
futures-util = "0.3.31"
sha2 = "0.10.8"
libp2p-mplex = "0.43.0"

[dev-dependencies]
tokio-test = "0.4.3"
